# 0x-rs

./: .dockerignore  .drone.yml  .env.example  .gitignore  Cargo.toml  README.md  codecov.yml  cspell.json  rustfmt.toml  workspace.code-workspace
.github/workflows/: bench.yml  build.yml  checks.yml  tests.yml
block-watcher/: Cargo.toml  Dockerfile
block-watcher/src/: allocator.rs  consumer.rs  lib.rs  logging.rs  main.rs  producer.rs  prometheus.rs  shutdown.rs  statistics.rs
order-watcher/: Cargo.toml  Dockerfile  Readme.md  build.rs  diesel.toml
order-watcher/ethereum-abis/: exchange.json
order-watcher/src/: lib.rs  main.rs  prometheus.rs
order-watcher/src/api/: error.rs  mod.rs
order-watcher/src/database/: mod.rs  queryable.rs  schema.rs
order-watcher/src/ethereum/: abi_coding.rs  batcher.rs  chain_info.rs  connection.rs  error.rs  mod.rs
order-watcher/src/orders/: error.rs  limit_order.rs  metadata.rs  mod.rs  signature_type.rs  signed_order.rs  signed_order_state.rs  signed_order_with_metadata.rs
order-watcher/src/utils/: mod.rs  recover.rs  serde.rs
order-watcher/test-data/: database.sql
types/: Cargo.toml  Readme.md  build.rs
types/protobuf/: maybe_large.proto  reorgable.proto
types/protobuf/web3/: address.proto  block_header.proto  h2048.proto  h256.proto  h64.proto  u128.proto  u256.proto
types/protobuf/zeroex/: limit_order.proto  metadata.proto  order_event.proto  signature.proto
types/src/: from_proto.rs  into_proto.rs  lib.rs  maybe_large.rs
types/src/kafka/: consumer.rs  mod.rs  producer.rs  storage.rs
types/src/proto/: mod.rs  web3.rs  zeroex.rs
