[package]
name = "block-watcher"
version = "0.1.0"
publish = false
authors = ["Mason Liang <mason@0x.org>", "Remco Bloemen <remco@0x.org>"]
edition = "2018"
description = "Watch block headers on Ethereum"
repository = "https://github.com/0xProject/0x-rs"
readme = "Readme.md"
license-file = "mit-license.md"
build = "build.rs"

# [lib]
# name = "lib"

[dependencies]
anyhow = "1.0"
chrono = { version = "0.4", features = [ "serde" ] }
futures = "0.3"
hyper = { version = "0.14", features = [ "full" ] }
mimalloc = { version = "0.1", default-features = false, optional = true }
once_cell = "1.8"
prometheus = { version = "0.12", features = [ "process" ] }
rdkafka = { version = "0.26", features = ["cmake-build"] }
structopt = "0.3"
thiserror = "1.0"
tokio = { version = "1.10", features = [ "full" ] }
tokio-stream = { version = "0.1", features = [ "sync" ] }
tracing = "0.1"
tracing-subscriber = "0.2"
tracing-test = "0.1"
types = { path = "../types" }
url = "2.2"
web3 = { version = "0.17", default-features = false, features = [ "ws-tls-tokio", "ws-tokio", "signing" ] }

[dev-dependencies]
criterion = { version = "0.3", features = [ "async_tokio" ] }
pretty_assertions = "1.3"
proptest = { version = "1.0" }

[build-dependencies]
anyhow = "1.0"
chrono = "0.4"
