[package]
name = "types"
description = "Shared types and associated utilities for 0x infrastructure."
publish = false
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
chrono = "0.4"
futures = "0.3"
hex = "0.4"
prost = "0.11"
prost-types = "0.8"
rdkafka = "0.26"
rusoto_core = "0.47"
rusoto_s3 = "0.47"
sha3 = "0.9"
structopt = "0.3"
thiserror = "1.0"
tokio = { version = "1.10", features = [ "full" ] }
tracing = "0.1"
tracing-test = "0.1"
web3 = { version = "0.17" }

[build-dependencies]
glob = "0.3"
prost-build = "0.8"
